Fixed Layout issues

--- a/pizza-app-client/src/App.css
+++ b/pizza-app-client/src/App.css
@@ -58,8 +58,8 @@ html, body, div#root, .App {
 
 .cardOptionInline-3 {
   margin: 5px;
-  height: 300px;
-  width: calc(33% - 10px);
+  height: 200px;
+  width: 250px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
@@ -102,6 +102,21 @@ html, body, div#root, .App {
   -moz-animation: fadeIn ease 1s;
   -o-animation: fadeIn ease 1s;
   -ms-animation: fadeIn ease 1s;
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-Y: auto;
+}
+
+.pageTitle {
+  margin: 0px;
+}
+.pageSubtext {
+  font-size: 12px;
+  padding-bottom: 10px;
+  color: red;
+  font-weight: bold;
 }
 
 @keyframes fadeIn {
